--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.4.1",
     "react-intl": "^2.4.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "intl": "^1.2.5",
     "jest": "^23.4.0"
   }
 }
