--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,5 +22,8 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "intl": "^1.2.5",
     "jest": "^23.4.0"
+  },
+  "jest": {
+    "collectCoverageFrom": ["src/**/*.js", "src/**/*.jsx", "!src/index.js"]
   }
 }
