--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "intl": "^1.2.5",
-    "jest": "^23.4.0"
+    "jest": "^23.4.0",
+    "underscore": "^1.9.1"
   },
   "jest": {
     "collectCoverageFrom": [
